Functionality to edit users and user metadata (new)

--- a/protected/extensions/cii/assets/css/pure.css
+++ b/protected/extensions/cii/assets/css/pure.css
@@ -84,8 +84,8 @@ https://github.com/yui/pure/blob/master/LICENSE.md
     -khtml-opacity: .4;
     -moz-opacity: .4;
     opacity: .4;
-    cursor: not-allowed;
     box-shadow: none;
+    color: #999
 }
 
 .pure-button-hidden {
@@ -235,9 +235,8 @@ https://github.com/yui/pure/blob/master/LICENSE.md
 }
 
 .pure-form input[type=text][disabled], .pure-form input[type=password][disabled], .pure-form input[type=email][disabled], .pure-form input[type=url][disabled], .pure-form input[type=date][disabled], .pure-form input[type=month][disabled], .pure-form input[type=time][disabled], .pure-form input[type=datetime][disabled], .pure-form input[type=datetime-local][disabled], .pure-form input[type=week][disabled], .pure-form input[type=number][disabled], .pure-form input[type=search][disabled], .pure-form input[type=tel][disabled], .pure-form input[type=color][disabled], .pure-form select[disabled], .pure-form textarea[disabled], .pure-form input[readonly], .pure-form select[readonly], .pure-form textarea[readonly] {
-    cursor: not-allowed;
     background-color: #eaeded;
-    color: #cad2d3;
+    color: #999;
     border-color: transparent;
 }
 
