--- a/protected/extensions/cii/assets/css/pure.css
+++ b/protected/extensions/cii/assets/css/pure.css
@@ -268,6 +268,10 @@ https://github.com/yui/pure/blob/master/LICENSE.md
     font-size: 90%
 }
 
+.pure-form label.checkbox {
+    cursor: pointer;
+}
+
 .pure-form fieldset {
     margin: 0;
     padding: .35em 0 .75em;
