--- a/protected/modules/dashboard/assets/css/main.css
+++ b/protected/modules/dashboard/assets/css/main.css
@@ -440,6 +440,102 @@ main .settings-container .body-content #main .content .group-header {
 	margin-bottom: 10px;
 }
 
+main .settings-container .body-content ul.providers {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	position: relative;
+	margin-right: -1px;
+	overflow: visible !important;
+	width: 100%;
+}
+
+main .settings-container .body-content ul.providers li {
+	width: 33%;
+	float: left;
+	border: 1px solid #eee;
+	max-height: 170px;
+	min-height: 170px;
+	-webkit-transition: all .2s ease-in-out;
+	-moz-transition: all .2s ease-in-out;
+	-ms-transition: all .2s ease-in-out;
+	-o-transition: all .2s ease-in-out;
+	transition: all .2s ease-in-out;
+}
+
+main .settings-container .body-content ul.providers li:hover {
+	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(82,168,236,0.6);
+	-moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(82,168,236,0.6);
+	box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(82,168,236,0.6);
+	border: 1px solid rgba(82,168,236,0.6);
+	background-color: #eee;
+	-webkit-transition: all .2s ease-in-out;
+	-moz-transition: all .2s ease-in-out;
+	-ms-transition: all .2s ease-in-out;
+	-o-transition: all .2s ease-in-out;
+	transition: all .2s ease-in-out;
+}
+
+main .settings-container .body-content ul.providers li:hover .tile {
+	background-color: #eee;
+	-webkit-transition: all .2s ease-in-out;
+	-moz-transition: all .2s ease-in-out;
+	-ms-transition: all .2s ease-in-out;
+	-o-transition: all .2s ease-in-out;
+	transition: all .2s ease-in-out;
+}
+
+main .settings-container .body-content ul.providers li .tile {
+	-webkit-transition: all .2s ease-in-out;
+	-moz-transition: all .2s ease-in-out;
+	-ms-transition: all .2s ease-in-out;
+	-o-transition: all .2s ease-in-out;
+	transition: all .2s ease-in-out;
+	position: relative;
+	padding: 2.4em;
+	padding-bottom: 10px;
+	background-color: white;
+	text-align: center;
+}
+
+main .settings-container .body-content ul.providers li .tile .help {
+	display: none;
+	-webkit-transition: all .2s ease-in-out;
+	-moz-transition: all .2s ease-in-out;
+	-ms-transition: all .2s ease-in-out;
+	-o-transition: all .2s ease-in-out;
+	transition: all .2s ease-in-out;
+}
+
+main .settings-container .body-content ul.providers li:hover .tile .help {
+	padding-top:10px;
+	display: inline-block;
+	text-align: center;
+	-webkit-transition: all .2s ease-in-out;
+	-moz-transition: all .2s ease-in-out;
+	-ms-transition: all .2s ease-in-out;
+	-o-transition: all .2s ease-in-out;
+	transition: all .2s ease-in-out;
+}
+
+main .settings-container .body-content ul.providers li .tile > label {
+	display: none;
+	margin: .5em 0 .2em;
+	width: 100px;
+}
+
+main .settings-container .body-content ul.providers li .tile .pure-input-2-3 {
+	display:block !important;
+	text-align: center;
+	width: 100px;
+	margin: 0 auto;
+	margin-top: 20px;
+}
+
+main .settings-container .body-content ul.providers li .tile .title img {
+	max-height: 40px;
+}
+
 main .posts-container .list-view .pagination {
 	float:left;
 	text-align:center;
