Analytics Dashboard is now functional

--- a/protected/modules/dashboard/assets/css/main.css
+++ b/protected/modules/dashboard/assets/css/main.css
@@ -448,6 +448,7 @@ main .settings-container .body-content ul.providers {
 	margin-right: -1px;
 	overflow: visible !important;
 	width: 100%;
+	top: -6px;
 }
 
 main .settings-container .body-content ul.providers li {
@@ -516,6 +517,7 @@ main .settings-container .body-content ul.providers li:hover .tile .help {
 	-ms-transition: all .2s ease-in-out;
 	-o-transition: all .2s ease-in-out;
 	transition: all .2s ease-in-out;
+	cursor: pointer;
 }
 
 main .settings-container .body-content ul.providers li .tile > label {
@@ -534,6 +536,21 @@ main .settings-container .body-content ul.providers li .tile .pure-input-2-3 {
 
 main .settings-container .body-content ul.providers li .tile .title img {
 	max-height: 40px;
+}
+
+main .settings-container .body-content .options-panel {
+	position: absolute;
+	top: 0;
+	right: -100%;
+	z-index: 10;
+	width: 80%;
+	background: #fff;
+	height: 100%;
+	padding: 20px;
+	border-left: 1px solid rgba(82,168,236,0.6);
+	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(82,168,236,0.6);
+	-moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(82,168,236,0.6);
+	box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(82,168,236,0.6);
 }
 
 main .posts-container .list-view .pagination {
@@ -994,6 +1011,16 @@ main .preview .preview-metadata {
 
 input[type="range"]::-ms-fill-lower {
 	background-color: #0078e7;
+}
+
+.transparent {
+	display: none;
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	z-index: 5;
+	background-color: transparent;
+	top: -6px;
 }
 
 /* ------------------------------------------
