--- a/protected/modules/dashboard/assets/css/main.css
+++ b/protected/modules/dashboard/assets/css/main.css
@@ -332,6 +332,23 @@ main .content-container .editor {
 	padding: 0px;
 }
 
+main .content-container .editor #main,
+main .content-container .editor #main .content {
+	height: 100%;
+	max-height: 100%;
+}
+
+main .content-container .editor textarea {
+	-webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+
+    width: 100%;
+    height: 100%;
+    resize: none;
+    border: none;
+    padding: 15px;
+}
 main .settings-container .sidebar {
 	width: 350px;
 	padding: 0px;
