--- a/protected/modules/dashboard/assets/css/main.css
+++ b/protected/modules/dashboard/assets/css/main.css
@@ -350,7 +350,9 @@ main .content-container .editor textarea {
 	-webkit-box-sizing: border-box;
        -moz-box-sizing: border-box;
             box-sizing: border-box;
-
+	box-shadow: none;
+	-webkit-box-shadow: none;
+	-mox-box-shadow: none;
     width: 100%;
     height: 100%;
     resize: none;
@@ -435,10 +437,14 @@ main .settings-container .body-content a#header-button {
 	margin: 27px 0px;
 	top: 4px;
 }
-main .settings-container .body-content #main,
+main .settings-container .body-content #main {
+	height: 75%;
+	max-height: 75%
+}
+
 main .content-container #main {
 	height: 100%;
-	max-height: 100%
+	max-height: 100%;
 }
 
 main .settings-container .body-content #main .content {
@@ -798,6 +804,19 @@ main .content-container .body-content {
 	-webkit-box-shadow: rgba(0,0,0, 0.1) 0px 0px 5px;
 }
 
+main .content-container .top-header {
+	border-bottom: 1px solid #eee;
+	padding: 7px 10px;
+	color: #999;
+	font-size: 11px;
+	font-family: 'Open Sans';
+	font-weight: 600;
+	text-transform: uppercase;
+}
+
+main .content-container .preview {
+	padding: 20px;
+}
 main .content-container input.title {
 	position: relative;
 	left: -22px;
