--- a/protected/modules/dashboard/assets/css/main.css
+++ b/protected/modules/dashboard/assets/css/main.css
@@ -342,8 +342,8 @@ main .content-container .editor {
 
 main .content-container .editor #main,
 main .content-container .editor #main .content {
-	height: 100%;
-	max-height: 100%;
+	height: 98%;
+	max-height: 98%;
 }
 
 main .content-container .editor textarea {
@@ -429,6 +429,10 @@ main .settings-container .body-content form {
 	height: 100%;
 }
 
+main form.content-container-form {
+	margin: 0;
+}
+
 main .settings-container .body-content form #header-button {
 	margin: 27px 0px;
 }
@@ -443,8 +447,8 @@ main .settings-container .body-content #main {
 }
 
 main .content-container #main {
-	height: 100%;
-	max-height: 100%;
+	height: 98%;
+	max-height: 98%;
 }
 
 main .settings-container .body-content #main .content {
