Updating CSS Updating Model to have correct savePrototype values Moving jQuery.tags into dashboard

--- a/protected/extensions/cii/assets/css/pure.css
+++ b/protected/extensions/cii/assets/css/pure.css
@@ -218,7 +218,12 @@ https://github.com/yui/pure/blob/master/LICENSE.md
     -webkit-font-smoothing: antialiased;
 }
 
-.pure-form input[type=text]:focus, .pure-form input[type=password]:focus, .pure-form input[type=email]:focus, .pure-form input[type=url]:focus, .pure-form input[type=date]:focus, .pure-form input[type=month]:focus, .pure-form input[type=time]:focus, .pure-form input[type=datetime]:focus, .pure-form input[type=datetime-local]:focus, .pure-form input[type=week]:focus, .pure-form input[type=number]:focus, .pure-form input[type=search]:focus, .pure-form input[type=tel]:focus, .pure-form input[type=color]:focus, .pure-form select:focus, .pure-form textarea:focus {
+.pure-form select {
+    height: 30px;
+    margin-bottom: 10px;
+}
+
+.pure-form select:focus, .pure-form input[type=text]:focus, .pure-form input[type=password]:focus, .pure-form input[type=email]:focus, .pure-form input[type=url]:focus, .pure-form input[type=date]:focus, .pure-form input[type=month]:focus, .pure-form input[type=time]:focus, .pure-form input[type=datetime]:focus, .pure-form input[type=datetime-local]:focus, .pure-form input[type=week]:focus, .pure-form input[type=number]:focus, .pure-form input[type=search]:focus, .pure-form input[type=tel]:focus, .pure-form input[type=color]:focus, .pure-form select:focus, .pure-form textarea:focus {
     outline: 0;
     outline: thin dotted \9;
     border-color: #129FEA;
