--- a/protected/modules/dashboard/assets/css/main.css
+++ b/protected/modules/dashboard/assets/css/main.css
@@ -358,6 +358,7 @@ main .content-container .editor textarea {
     resize: none;
     border: none;
     padding: 15px;
+    font-size: 14px;
 }
 
 main .settings-container .sidebar {
@@ -449,8 +450,8 @@ main .settings-container .body-content #main {
 }
 
 main .content-container #main {
-	height: 98%;
-	max-height: 98%;
+	height: 96%;
+	max-height: 96%;
 }
 
 main .settings-container .body-content #main .content {
