Added ability to create new cards and resize existing ones. Still need to generate a unique id for each card

--- a/protected/modules/dashboard/assets/css/main.css
+++ b/protected/modules/dashboard/assets/css/main.css
@@ -1036,6 +1036,10 @@ main .widget-container div.card-huge {
 	height: 482px;
 }
 
+main .widget-container div.card-huge .body {
+	height: 93%;
+}
+
 main .widget-container div .footer {
 	height: 15%; 
 	border-top: 1px solid #eee;
