Bunch of small stuff

--- a/protected/modules/dashboard/assets/css/main.css
+++ b/protected/modules/dashboard/assets/css/main.css
@@ -943,7 +943,7 @@ main .post-data .status.draft {
 }
 
 main .post-data .status.scheduled {
-	color: #FFF73B;
+	color: #e6a550;
 }
 
 main .post-metadata {
