There is a difference between cards and plugins... that difference is yet determined...

--- a/protected/modules/dashboard/assets/css/main.css
+++ b/protected/modules/dashboard/assets/css/main.css
@@ -165,6 +165,9 @@ main .settings-container .header.secondary {
 	border-bottom: 0px;
 }
 
+main .settings-container .strikethrough {
+	
+}
 main .settings-container .list-view .items {
 	margin-top: -46px;
 }
