- Weather card is now in github.com/charlesportwoodii/ciims-weather-card - Cards can now be installed from Github - Cards can be globally deleted - Fixes issues related to installing new cards via external source - TODO: Still need to figure out how to do self-updates on cards

--- a/protected/modules/dashboard/assets/css/main.css
+++ b/protected/modules/dashboard/assets/css/main.css
@@ -160,6 +160,14 @@ main .settings-container .small-text {
 	padding-bottom: 15px;
 }
 
+main .settings-container .inline {
+	display:inline-block;
+}
+
+main .settings-container .meta-container .icon-remove {
+	top: -8px;
+}
+
 main .settings-container .header.secondary {
 	padding-left: 60px;
 	border-bottom: 0px;
