--- a/themes/default/assets/css/main.css
+++ b/themes/default/assets/css/main.css
@@ -413,7 +413,7 @@ main #sharebox #textbox,[id*='sharebox-'] [id*='textbox-'] {
 }
 
 main #sharebox #close, [id*='sharebox-'] [id*='close-'] {
-    background: no-repeat url(../images/admin/bg.png) -33px -31px;
+    background: no-repeat url(../images/bg.png) -33px -31px;
     height: 9px;
     width: 9px;
     cursor: pointer;
