And.. open sans stopped working for no reason

--- a/protected/modules/dashboard/assets/css/main.css
+++ b/protected/modules/dashboard/assets/css/main.css
@@ -68,7 +68,7 @@ body, html {
 body {
 	background: #eee;
 	margin: 0;
-	font-family: "Open Sans", Arial, sans-serif;
+	font-family: "PT Sans Bold", Arial, sans-serif;
 	font-size: 14px;
 	line-height: 20px;
 }
