--- a/protected/modules/dashboard/assets/css/main.css
+++ b/protected/modules/dashboard/assets/css/main.css
@@ -1116,6 +1116,7 @@ main .preview .preview-header .icon-edit,
 main .preview .preview-header .icon-gear,
 main .preview .preview-header .icon-trash,
 main .preview .preview-header .icon-eye-open,
+main .body-content .icon-trash,
 main .editor .icon-camera,
 main .content-container .icon-gear {
 	position: relative;
