--- a/protected/modules/dashboard/assets/css/main.css
+++ b/protected/modules/dashboard/assets/css/main.css
@@ -59,10 +59,10 @@ label {
 	font-weight: 600;
 }
 
-body, html {
-	height: 95%;
-	min-height: 95%;
-	max-height: 95%;
+html, body {
+	height: 100%;
+	min-height: 100%;
+	max-height: 100%;
 }
 
 body {
@@ -78,13 +78,14 @@ header {
 	background: #2D2D29;
 	color: #eee;
 	margin: 0px;
-	width: 100%;
-	height: 35px;
+	height: 100%;
+	width: 100px;
 	box-shadow: rgba(0,0,0, 0.1) 0px 0px 5px;
 	-moz-box-shadow: rgba(0,0,0, 0.1) 0px 0px 5px;
 	-webkit-box-shadow: rgba(0,0,0, 0.1) 0px 0px 5px;
-	margin-bottom: 30px;
 	position: relative;
+	float:left;
+	display: inline-block;
 }
 
 /** Header Navigation **/
@@ -163,10 +164,21 @@ header .user .options {
 
 /** Main **/
 
+.main-container {
+	margin: 0;
+	width: 100%;
+	overflow: hidden;
+	height: 100%;
+	min-height: 100%;
+}
+
 /** Main Dashboard **/
 main {
+	margin-top: 20px;
 	min-height: 100%;
 	height: 100%;
+	max-width: 100%;
+	overflow:hidden;
 }
 
 main .dashboard .push-header {
